# argilla-server

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build-push-docker.yml  build-python-package.yml  check-repo-files.yml  dependency-review.yml  package.yml  run-python-tests.yml
docker/quickstart/: Dockerfile  Procfile  requirements.txt
docker/quickstart/scripts/: load_data.py  start_quickstart_argilla.sh
docker/server/: Dockerfile
docker/server/scripts/: start_argilla_server.sh
src/argilla_server/: __init__.py  __main__.py  _app.py  _constants.py  _version.py  app.py  constants.py  enums.py  policies.py  routes.py  settings.py  static_rewrite.py  telemetry.py
src/argilla_server/alembic/versions/: ca7293c38970_change_suggestions_score_column_to_json.py
src/argilla_server/apis/: routes.py
src/argilla_server/bulk/: create_records.py  records_bulk.py  update_records.py  update_records_bulk.py
src/argilla_server/cli/search_engine/: reindex.py
src/argilla_server/contexts/: accounts.py  datasets.py  info.py  questions.py  records.py  search.py
src/argilla_server/daos/backend/: base.py  generic_elastic.py
src/argilla_server/errors/: __init__.py  adapter.py  api_errors.py
src/argilla_server/errors/future/: base_errors.py
src/argilla_server/models/: __init__.py  database.py  questions.py
src/argilla_server/schemas/v1/: datasets.py  info.py  questions.py  records.py  records_bulk.py  responses.py  suggestions.py  users.py
src/argilla_server/search_engine/: base.py  commons.py  elasticsearch.py  opensearch.py
src/argilla_server/security/: settings.py
src/argilla_server/security/auth_provider/: base.py
src/argilla_server/services/: info.py
src/argilla_server/static/_nuxt/: 00fc752.js  0173efc.js  0181c85.js  0327878.js  0397ba2.js  04606eb.js  052ddae.js  0705ab7.js  0970e64.js  0acb181.js  (+266 more)
src/argilla_server/utils/: __init__.py  _telemetry.py
src/argilla_server/validators/: questions.py  records.py  records_bulk.py  response_values.py  responses.py  suggestions.py  vectors.py
tests/: conftest.py  factories.py
tests/unit/: conftest.py  test_app.py
tests/unit/commons/: test_telemetry.py
tests/unit/errors/: test_api_errors.py
tests/unit/search_engine/: test_commons.py  test_elastisearch.py  test_opensearch.py
tests/unit/security/: test_model.py  test_provider.py  test_settings.py
tests/unit/utils/: test_dependency.py
tests/unit/validators/: test_records_bulk.py
(+73 files in other folders)
