[project]
name = "argilla-server"
dynamic = ["version"]
description = "Open-source tool for exploring, labeling, and monitoring data for NLP projects."
authors = [
    {name = "argilla", email = "contact@argilla.io"},
]
dependencies = [
    # Basic dependencies
    "fastapi >= 0.103.1,< 1.0.0",
    "pydantic >= 1.10.7,< 2.0",
    "uvicorn[standard] >= 0.15.0,< 0.25.0",
    "opensearch-py ~= 2.0.0",
    "elasticsearch8[async] ~= 8.7.0",
    "smart-open",
    "brotli-asgi >= 1.1,< 1.3",
    # Database dependencies
    "alembic ~= 1.9.0",
    "SQLAlchemy ~= 2.0.0",
    "greenlet >= 2.0.0",
    # Async SQLite
    "aiosqlite >=0.19.0",
    # metrics
    "scikit-learn >= 0.24.2",
    # Statics server
    "aiofiles >= 0.6,< 22.2",
    "PyYAML >= 5.4.1,< 6.1.0",
    # security dependencies
    "python-multipart ~= 0.0.5",
    "python-jose[cryptography] >= 3.2,< 3.4",
    "passlib[bcrypt] ~= 1.7.4",
    # Info status
    "psutil >= 5.8, <5.10",
    # Telemetry
    "segment-analytics-python == 2.2.0",

    # Moved from optional dependencies (REVIEW)
    # for logging, tracebacks, printing, progressbars
    "rich != 13.1.0",
    # for CLI
    "typer >= 0.6.0, < 0.10.0", # spaCy only supports typer<0.10.0
]
requires-python = ">=3.8,<3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
postgresql = [
    "psycopg2 ~= 2.9.5; sys_platform != 'darwin'",
    # If we're on macOS, then install `psycopg2-binary` instead
    "psycopg2-binary ~= 2.9.5; sys_platform == 'darwin'",
    # Async PostgreSQL
    "asyncpg >=0.27.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/argilla_server/_version.py"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.3",
    "pytest-env>=1.1.3",
    "factory-boy~=3.2.1",
    "httpx>=0.26.0",
]
